5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1892_1655.log
== TEST (2019-07-09 18:45:23) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(et)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="AM"):
		cont[0]==cont[0]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[1]=="PA"):
		cont[0]cont[0]+1
-- ERROR:
File "XXXX", line 16
    cont[0]cont[0]+1
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:46:08) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(et)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="AM"):
		cont[0]==cont[0]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[1]=="PA"):
		cont[0]cont[0]+1
print(max(cont))
print(cont)
-- ERROR:
File "XXXX", line 16
    cont[0]cont[0]+1
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:46:28) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(et)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="AM"):
		cont[0]==cont[0]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[i]=="PA"):
		cont[0]cont[0]+1
print(max(cont))
print(cont)
-- ERROR:
File "XXXX", line 16
    cont[0]cont[0]+1
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:46:39) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(et)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="AM"):
		cont[0]==cont[0]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[i]=="PA"):
		cont[0]=cont[0]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:47:23) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="AM"):
		cont[0]==cont[0]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[i]=="PA"):
		cont[0]=cont[0]+1
print(max(cont))
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:47:23) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="AM"):
		cont[0]==cont[0]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[i]=="PA"):
		cont[0]=cont[0]+1
print(max(cont))
print(cont)
-- EXECUTION TIME:
0.862533
-- TEST CASE 1:
---- input:
PA,AM,AM,AC,AM,AC,RR,AM,AC,AM,AM,RO,AM,RR,PA
---- correct output:
7
[3 7 2 1 2]
---- user output:
12
[12  0  0  0  0]
-- TEST CASE 2:
---- input:
AM,AC,PA,PA,AM,RO,RO
---- correct output:
2
[1 2 2 2 0]
---- user output:
6
[6 0 0 0 0]
-- TEST CASE 3:
---- input:
AC,RO,RO,RR,AC,AC,PA,AM,AC,RR,RR,RR,RO,AM
---- correct output:
4
[4 2 1 3 4]
---- user output:
10
[10  0  0  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:48:01) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="AM"):
		cont[0]==cont[0]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[i]=="PA"):
		cont[0]=cont[0]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:50:19) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[i]=="PA"):
		cont[0]=cont[0]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:51:35) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[i]=="PA"):
		cont[0]=cont[0]+1
print(es)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:52:20) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[i]=="PA"):
		cont[0]=cont[0]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:52:51) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="RR"):
		cont[0]=cont[0]+1
	if(es[i]=="RO"):
		cont[0]=cont[0]+1
	if(es[i]=="PA"):
		cont[0]=cont[0]+1
print(if)
-- ERROR:
File "XXXX", line 15
    print(if)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:53:59) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="RR"):
		cont[2]=cont[2]+1
	if(es[i]=="RO"):
		cont[3]=cont[3]+1
	if(es[i]=="PA"):
		cont[4]=cont[4]+1
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:54:10) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="RR"):
		cont[2]=cont[2]+1
	if(es[i]=="RO"):
		cont[3]=cont[3]+1
	if(es[i]=="PA"):
		cont[4]=cont[4]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:54:24) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="RR"):
		cont[2]=cont[2]+1
	if(es[i]=="RO"):
		cont[3]=cont[3]+1
	if(es[i]=="PA"):
		cont[4]=cont[4]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:54:24) 
-- CODE:
from numpy import*
es=input("qual o estado:").split(",")
cont=zeros(5,dtype=int)
for i in range (size(es)):
	if(es[i]=="AM"):
		cont[0]=cont[0]+1
	if(es[i]=="AC"):
		cont[1]==cont[1]+1
	if(es[i]=="RR"):
		cont[2]=cont[2]+1
	if(es[i]=="RO"):
		cont[3]=cont[3]+1
	if(es[i]=="PA"):
		cont[4]=cont[4]+1
print(cont)
-- EXECUTION TIME:
0.877896
-- TEST CASE 1:
---- input:
PA,AM,AM,AC,AM,AC,RR,AM,AC,AM,AM,RO,AM,RR,PA
---- correct output:
7
[3 7 2 1 2]
---- user output:
[7 0 2 1 2]
-- TEST CASE 2:
---- input:
AM,AC,PA,PA,AM,RO,RO
---- correct output:
2
[1 2 2 2 0]
---- user output:
[2 0 0 2 2]
-- TEST CASE 3:
---- input:
AC,RO,RO,RR,AC,AC,PA,AM,AC,RR,RR,RR,RO,AM
---- correct output:
4
[4 2 1 3 4]
---- user output:
qual o estado:[2 0 4 3 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
